<?xml version="1.0"?>

<package format="2">
    <name>Joey</name>
    <version>0.0.0</version>
    <description>Joystick teleoperation for rovers</description>

    <maintainer email="muchen@u.northwestern.edu">Muchen Sun</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
</package>
